[project]
name = "urllm"
version = "0.3.0"
description = "URL technical footprint analyzer with GDPR & security-focused GenAI reasoning"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "litellm>=1.40",
    "rich>=13.7",
]

[project.scripts]
urllm = "urllm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
