[project]
name = "urllm"
version = "0.4.0"
description = "URL technical footprint analyzer with GDPR & security-focused GenAI reasoning"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "litellm>=1.40",
    "rich>=13.7",
]

[project.scripts]
urllm = "urllm:main"

[tool.hatch.build.targets.wheel]
include = ["urllm.py"]

[tool.hatch.build.targets.sdist]
include = ["urllm.py", "README.md", "pyproject.toml"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
